# Face

./: .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: database.py  face_service.py  main.py  models.py  requirements.txt  start.sh
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/transit-app/: index.html  package.json
artifacts/transit-app/.replit-artifact/: artifact.toml
artifacts/transit-app/src/: App.tsx  index.css
artifacts/transit-app/src/components/: CameraView.tsx  PageTransition.tsx
artifacts/transit-app/src/lib/: auth.ts
artifacts/transit-app/src/pages/: AdminUsers.tsx  BusTerminal.tsx  Dashboard.tsx  Home.tsx  LinkCard.tsx  Login.tsx  Register.tsx
attached_assets/: Pasted--usr-bin-env-python3-Production-Grade-Hybrid-Face-Recog_1781366240266.txt
lib/api-spec/: openapi.yaml
