[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]
